# ndlocr-pdf

./: .gitattributes  .gitignore  .gitmodules  LICENSE  NOTICE  README.md  SPEC.md  pyproject.toml
.github/workflows/: build.yml  test.yml
src/: _deps.py  _version.py  app.py  cli.py  figocr.py  pagespec.py  paths.py  pdfmerge.py  pdfslice.py  runner.py
tests/: conftest.py  test_figocr.py  test_integration_ocr.py  test_pagespec.py  test_pdfmerge.py
tests/fixtures/: make_sample_pdf.py  make_sample_with_figure_pdf.py
tools/: gen_notice.py  smoke_test.ps1
